--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.30.0-rc3)  # Проверка версии CMake.
           # Если версия установленой программы
           # старее указаной, произайдёт аварийный выход.
+set(CMAKE_CXX_STANDARD 17)
 
 project(ProjectSC)   # Название проекта
 
